<resources>
    <string name="app_name">TeamHiring</string>
    <string name="notification_title">Job|Bits Pan India</string>
    <string name="notification_demo">Bits Pan India Viewed Your Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_login">By Creating Passcode You Agree With Our Terms And Conditions And Privacy Policy</string>
    <string name="cd_signin">cd signin illustration</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="sign_in_with_mobile">Sign in with mobile</string>
    <string name="new_user_register">--------- New user? Register now ---------</string>
    <string name="your_first">Here\'s your first step with us</string>
    <string name="company">Company name</string>
    <string name="mobile">Mobile</string>
    <string name="signup">SignUp</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="find_your_perfect_job">Find your perfect job</string>
    <string name="hi_welcome_back">Hi, Welcome back</string>
    <string name="recruiter">Recruiter</string>
    <string name="job_seeker">Employee</string>
    <string name="or">OR</string>
    <string name="i_am_a">I am a</string>
    <string name="select_user_type">Select User Type</string>
    <string name="recommended_job">Recommended Jobs</string>
    <string name="no_data_found">No Data Found</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="hello_welcome_back_to_our_account">Hello welcome back to our account.</string>
    <string name="mobile_no">Mobile no.</string>
    <string name="request_otp">Request OTP</string>
    <string name="_91">+91</string>
    <string name="enter_your_verification_code">Enter Your Verification Code</string>
    <string name="we_have_sent_6_digits_otp_to_below_mobile_number">We have sent 6 digits OTP to below Mobile Number.</string>
    <string name="_91_9079298775">+91–9079298775</string>
    <string name="verify">Verify</string>
    <string name="did_not_receive">Did not received? </string>
    <string name="resend">RESEND</string>
    <string name="skip"><![CDATA[Skip>>]]></string>
    <string name="next">Next</string>
    <string name="cd_back_arrow">cd back arrow</string>
    <string name="already_have_an_account_dash">--------Already have an account?--------</string>
    <string name="b_tech">B.tech</string>
    <string name="rishabh_garg">Rishabh Garg</string>
    <string name="exp_years">%.2f years</string>
    <string name="ann_income">Rs %d - %d LPA</string>
    <string name="full_time">Full time</string>
    <string name="work_from_office">Work from office</string>
    <string name="job_emp_descr">I am an android developer and coding enthusiast and good problem solver and have experience to develop and deploy applications on playstore</string>
    <string name="backend_developer">Backend Developer</string>
    <string name="bits_panindia">Bits Panindia</string>
    <string name="android_developer">Android Developer</string>
    <string name="count_0">0</string>
    <string name="saved">Saved</string>
    <string name="chat">Chat</string>
    <string name="cd_icon_chat">cd icon chat</string>
    <string name="posted">Posted</string>
    <string name="company_verified">Company status: Approved</string>
    <string name="company_info">Company Info</string>
    <string name="add_detail">add detail</string>
    <string name="industrial_type">Industrial Type</string>
    <string name="contact_num">Contact num</string>
    <string name="recruit_design">Recruit Design</string>
    <string name="company_gst_no">Company GST no.</string>
    <string name="num_of_emp">Num of emp</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="nationality">Nationality</string>
    <string name="zip_postal">Zip/Postal</string>
    <string name="company_address">Company Address</string>
    <string name="help_desk">Help desk</string>
    <string name="rate_us">Rate us</string>
    <string name="partner_preference">Partner Preference</string>
    <string name="managed_jobs">Managed jobs</string>
    <string name="profile">Profile</string>
    <string name="dummy_email">employee@gmail.com</string>
    <string name="my_account">My Account</string>
    <string name="software_developer">Software Developer</string>
    <string name="email">Email:</string>
    <string name="qualification">Qualification:</string>
    <string name="basic_details">Basic Details</string>
    <string name="dob">DOB:</string>
    <string name="other_information">Other Information</string>
    <string name="career_preferences">Career Preferences</string>
    <string name="customer_support">Customer Support</string>
    <string name="gender">Gender:</string>
    <string name="jobs_interacted">Jobs Interacted</string>
    <string name="cd_viewed_icon">cd viewed icon</string>
    <string name="rs_2_6_lpa">Rs 2 – 6 LPA</string>
    <string name="little_english">Little English</string>
    <string name="human_resorce">Human resorce</string>
    <string name="date_format">%s - %s</string>
    <string name="job_description">Job Description</string>
    <string name="job_desc_para">We are looking for an Android engineer responsible for the development and maintenance of applications aimed at a vast
    number of diverse Android devices. Your primary focus will be the development of android applications and their integration with back-end services.
    You will be working along-side other engineers and developers working on differnet layers of the infrastructure. Therefore, commitment to collaborative problem solvine.
    sophisticated design, and creating quality products is essential.\n
    1. Android retrofite knowledge\n
    2. Dagger hilt and many more</string>
    <string name="chat_space">Chat</string>
    <string name="apply_space">Apply</string>
    <string name="location">Location</string>
    <string name="career_pref_objective">I m looking for greatest opportunity where i can show my greatest skills.</string>
    <string name="request_resume">Request Resume</string>
    <string name="gurgaon">Gurgaon</string>
    <string name="opened">Opened</string>
    <string name="num_responses">%d\nResponses</string>
    <string name="current_job">Current Job</string>
    <string name="job_posted">Job Posted</string>
    <string name="search_the_best_match">Search the best match</string>
    <string name="manage_jobs">Manage Jobs</string>
    <string name="filter">Filter</string>
    <string name="all_saved_candidates">All saved candidates</string>

    // Demo text
    <string name="android_engineer">Android Engineer</string>

    // Content Descriptions
    <string name="cd_icon_job">cd icon job list</string>
    <string name="cd_icon_saved">cd icon saved</string>
    <string name="cd_app_logo">cd app logo</string>
    <string name="cd_wave_image">cd wave image</string>
    <string name="select_your_job_post">Select your job post</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="basic_filters">Basic filters</string>
    <string name="about_candidate">About Candidate</string>
    <string name="male">Male</string>
    <string name="skill">Skill</string>
    <string name="job_preferences">Job Preferences</string>
    <string name="_25_yr_old">25 yr old</string>
    <string name="experiences">Experiences</string>
    <string name="cd_icon_star">cd icon star</string>
    <string name="jan_2_present">Jan 2 - Present</string>
    <string name="notice_period">Notice period: %s Days</string>
    <string name="format_age">%s yr old</string>
    <string name="previous_companies">Previous Companies</string>
    <string name="current_company">Current company</string>

    // Post job recruiter
    <string name="job_title">Job Title</string>
    <string name="enter_job_title">Enter job title</string>
    <string name="skills_prefered">Skills Prefered</string>
    <string name="skills">Skills</string>
    <string name="openings">Openings</string>
    <string name="enter_openings">Enter Openings</string>
    <string name="enter_type">Enter Type</string>
    <string name="find_best_employee_s">Find best employee\'s</string>
    <string name="post_your_job_here">Post Your Job Here</string>
    <string name="job_detail">Job Detail</string>
    <string name="employee_prefer">Employee prefer</string>
    <string name="exp_required">Exp. Required</string>
    <string name="select">Select</string>
    <string name="post">Post</string>
    <string name="description">Description</string>
    <string name="post_job">Post Job</string>
    <string name="job_type">Job Type</string>
    <string name="job_category">Job Category</string>
    <string name="experience">Experience</string>
    <string name="search">Search</string>
    <string name="advance_filters">Advance Filters</string>
    <string name="english_level">English level</string>
    <string name="candidate_age">Candidate Age</string>
    <string name="employee_applied">Employee applied</string>
    <string name="employee_viewed_you">Employee Viewed You</string>
    <string name="closed">Closed</string>

</resources>