<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/space_24"
        tools:context=".ui.mainFragments.SignInFragment">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium_600"
            android:text="@string/already_have_an_account"
            android:textColor="@color/text_heading"
            android:textSize="@dimen/text_20"
            android:layout_marginEnd="@dimen/space_16"
            app:layout_constraintBottom_toBottomOf="@id/signInImg"
            app:layout_constraintEnd_toStartOf="@id/signInImg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/signInImg" />

        <ImageView
            android:id="@+id/signInImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_24"
            android:contentDescription="@string/cd_signin"
            android:src="@drawable/illust_sigin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signInEmailEdTxt"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_32"
            android:hint="@string/email_id"
            app:boxBackgroundColor="@color/white"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signInImg">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signInPassEdTxt"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_12"
            android:hint="@string/password"
            app:boxBackgroundColor="@color/white"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/signInEmailEdTxt"
            app:layout_constraintStart_toStartOf="@id/signInEmailEdTxt"
            app:layout_constraintTop_toBottomOf="@id/signInEmailEdTxt">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/signInForPassTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/blue_500"
            android:textSize="@dimen/text_14"
            app:layout_constraintEnd_toEndOf="@id/signInPassEdTxt"
            app:layout_constraintTop_toBottomOf="@id/signInPassEdTxt" />

        <Button
            android:id="@+id/signInLogBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_36"
            android:layout_marginTop="@dimen/space_24"
            android:background="@drawable/button_round_corner"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="@dimen/text_16"
            app:layout_constraintEnd_toEndOf="@id/signInPassEdTxt"
            app:layout_constraintStart_toStartOf="@id/signInPassEdTxt"
            app:layout_constraintTop_toBottomOf="@id/signInForPassTxt" />

        <TextView
            android:id="@+id/signInMobileTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8"
            android:padding="@dimen/space_8"
            android:text="@string/sign_in_with_mobile"
            android:textColor="@color/blue_500"
            android:textSize="@dimen/text_14"
            app:layout_constraintEnd_toEndOf="@id/signInLogBtn"
            app:layout_constraintStart_toStartOf="@id/signInLogBtn"
            app:layout_constraintTop_toBottomOf="@id/signInLogBtn" />


        <TextView
            android:id="@+id/signInRegisterTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_8"
            android:text="@string/new_user_register"
            android:textColor="@color/blue_500"
            android:textSize="@dimen/text_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/signInLogBtn"
            app:layout_constraintStart_toStartOf="@id/signInLogBtn"
            app:layout_constraintTop_toBottomOf="@id/signInMobileTxt" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>