<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/space_16"
        tools:context=".ui.mainFragments.LoginFragment">

        <ImageView
            android:id="@+id/loginBackImg"
            android:layout_width="@dimen/space_32"
            android:layout_height="@dimen/space_32"
            android:contentDescription="@string/cd_back_arrow"
            android:src="@drawable/icon_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/blue_500" />


        <TextView
            android:id="@+id/loginMainHeadTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/enter_your_mobile_number"
            android:textColor="@color/black"
            android:textSize="@dimen/text_32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginBackImg" />

        <TextView
            android:id="@+id/loginSubHeadTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hello_welcome_back_to_our_account"
            android:textSize="@dimen/text_14"
            app:layout_constraintEnd_toEndOf="@id/loginMainHeadTxt"
            app:layout_constraintStart_toStartOf="@id/loginMainHeadTxt"
            app:layout_constraintTop_toBottomOf="@+id/loginMainHeadTxt" />


        <com.hbb20.CountryCodePicker
            android:id="@+id/loginConCodePick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_12"
            app:ccp_defaultNameCode="IN"
            app:ccp_showNameCode="false"
            app:ccp_textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/loginSubHeadTxt"
            app:layout_constraintTop_toTopOf="@id/loginMobileEdTxt" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginMobileEdTxt"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16"
            android:layout_marginTop="@dimen/space_24"
            android:hint="@string/mobile"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/loginConCodePick"
            app:layout_constraintTop_toBottomOf="@id/loginSubHeadTxt">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="10" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginLogBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_36"
            android:layout_marginTop="@dimen/space_8"
            android:background="@drawable/button_round_corner"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="@dimen/text_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginMobileEdTxt" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/space_24"
            android:layout_marginTop="@dimen/space_45"
            android:layout_marginEnd="@dimen/space_24"
            android:layout_marginBottom="@dimen/space_16"
            android:gravity="center"
            android:text="@string/terms_login"
            app:layout_constraintEnd_toEndOf="@id/loginMainHeadTxt"
            app:layout_constraintStart_toStartOf="@id/loginMainHeadTxt"
            app:layout_constraintTop_toBottomOf="@id/loginLogBtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>