<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/empCurrField">

        <View
            android:id="@+id/empCircViewSixth"
            android:layout_width="4dp"
            android:layout_height="4dp"
            android:background="@drawable/bg_view_full_circle_themed"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/empCurrCompNameTxt"
            app:layout_constraintBottom_toBottomOf="@id/empCurrCompNameTxt" />

        <TextView
            android:id="@+id/empCurrCompNameTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8"
            android:layout_marginTop="@dimen/space_12"
            android:fontFamily="@font/roboto_medium_500"
            android:text="@string/bits_panindia"
            android:textColor="@color/text_heading"
            android:textSize="@dimen/text_16"
            app:layout_constraintEnd_toStartOf="@id/empCurrJobDateTxt"
            app:layout_constraintStart_toEndOf="@id/empCircViewSixth"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/empCurrJobDateTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/jan_2_present"
            android:textSize="@dimen/text_16"
            android:textColor="@color/sub_views"
            android:fontFamily="@font/roboto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/empCurrCompNameTxt" />

        <TextView
            android:id="@+id/empCurrDesignTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backend_developer"
            android:textColor="@color/text_heading"
            android:textSize="@dimen/text_14"
            android:layout_marginTop="@dimen/space_4"
            android:fontFamily="@font/roboto"
            app:layout_constraintStart_toStartOf="@+id/empCurrCompNameTxt"
            app:layout_constraintTop_toBottomOf="@+id/empCurrCompNameTxt" />

        <TextView
            android:id="@+id/empCurrNoticePeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice_period"
            android:textColor="@color/text_heading"
            android:textSize="@dimen/text_14"
            android:layout_marginTop="@dimen/space_4"
            android:fontFamily="@font/roboto"
            app:layout_constraintStart_toStartOf="@+id/empCurrDesignTxt"
            app:layout_constraintTop_toBottomOf="@id/empCurrDesignTxt" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>